# Process-Simulate

./: .gitignore  README.md  index.html  sim-params-abf.json
.github/workflows/: ci.yml  release.yml
openspec/changes/archive/2026-06-02-abf-smk-agv-simulation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-02-redesign-parameter-panel/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-02-smk-abf-style-line/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-add-station-uph-agv-board-zoom/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-03-configurable-equipment-counts/: design.md  proposal.md  (+1 more)
openspec/changes/custom-line-builder/: design.md  tasks.md
openspec/changes/tauri-desktop-packaging/: design.md  proposal.md  tasks.md
openspec/specs/agv-utilization-board/: spec.md
openspec/specs/command-bar-hierarchy/: spec.md
openspec/specs/display-refinements/: spec.md
openspec/specs/equipment-count-config/: spec.md
openspec/specs/flowchart-zoom-pan/: spec.md
openspec/specs/line-blueprint-io/: spec.md
openspec/specs/line-blueprint-model/: spec.md
openspec/specs/line-builder-wizard/: spec.md
openspec/specs/live-vitals-bar/: spec.md
openspec/specs/presentation-mode/: spec.md
openspec/specs/result-scorecard/: spec.md
openspec/specs/scenario-comparison-table/: spec.md
openspec/specs/station-uph-tooltip/: spec.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
ui/: index.html
(+31 files in other folders)
