[package]
name = "ching-sim"
version = "0.3.6"
description = "製程 AGV 模擬系統"
authors = ["Ching Tech 擎添工業"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
base64 = "0.22"

[profile.release]
opt-level = "s"
lto = true
strip = true
